apps/ingress/base/cluster-issuer-patch.yaml
# Strategic merge patch to make cluster-issuer configurable
# This will be overridden in environment overlays
# For example, in dev/uat: "internal-ca-issuer"
# In production: "letsencrypt-prod"
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: not-important
  annotations:
    cert-manager.io/cluster-issuer: $(CLUSTER_ISSUER)
